src/styles/5 - objects/_form.scss
.form {
  font-size: 1rem;
}
.form__label {
  display: block;
}
.form__input {
  display: block;
  border: 1px solid $color-border;
  border-radius: 2px;
  width: 100%;
  font-size: 0.875em;
  height: 2.575em;
  margin-bottom: 1.214em;
  padding-left: 1.214em;
  
  @include bp-mobile {
    margin-bottom: 0.8em;
  }
}
.button {
  display: block;
  height: 2.575em;
  width: 100%;
  cursor: pointer;
  font-size: 0.875em;
  text-transform: uppercase;
  color: $color-white;
  background: $color-middle-blue;
  border: 1px solid $color-border;
  border-radius: 2px;
}

::-webkit-input-placeholder { /* Safari, Chrome and Opera */
  color: $color-text;
  opacity: 1;
}
:-moz-placeholder { /* Firefox 18- */
  color: $color-text;
  opacity: 1;
}
::-moz-placeholder { /* Firefox 19+ */
  color: $color-text;
  opacity: 1;
}
:-ms-input-placeholder { /* IE 10+ */
  color: $color-text;
  opacity: 1;
}
::-ms-input-placeholder { /* Edge */
  color: $color-text;
  opacity: 1;
}
:placeholder-shown { /* Standard one last! */
  color: $color-text;
  opacity: 1;
}

